# src/main/java/br/edu/utfpr/tsi/xenon/domain/recognize/entity/RecognizeEntity.java
@@ -14,14 +14,14 @@ import lombok.Data;
 @Entity
 @Table(name = "recognizers")
 @Data
-public class Recognize {
+public class RecognizeEntity {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(name = "origin")
-    private String origin;
+    @Column(name = "origin_ip")
+    private String originIp;
 
     @Column(name = "epoch_time")
     private LocalDateTime epochTime;
@@ -34,6 +34,16 @@ public class Recognize {
 
     @Column(name = "created_at")
     private LocalDate createdAt;
+
+    @Column(name = "has_error")
+    private Boolean hasError = Boolean.FALSE;
+
+    @Column(name = "access_granted")
+    private Boolean accessGranted;
+
+    @Column(name = "driver_name")
+    private String driverName;
+
 
     @PrePersist
     private void newRecognize() {
